# gimp-palette

./: .gitignore  .pylintrc  Makefile  README.md  pyproject.toml
example/: __main__.py  gogh_themes.json
gp/: __init__.py
