[tool.poetry]
name = "gimp-palette"
version = "0.1.0"
description = ""
authors = ["Tim Martin <tim@timmart.in>"]

[tool.poetry.dependencies]
python = "^3.10"
attrs = "^21.4.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
mypy = "^0.960"
pylint = "^2.13.9"
isort = "^5.10.1"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
